# btcc

./: .gitignore  README.md  meson.build
btcc/: btcc_generated.py
pysrc/: README.md  __init__.py  btcc.py
src/: btcc.cu
subprojects/: tcc.wrap
testbench/: cuda_results.csv  validate.py
